--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "firebase": "^12.7.0",
+    "googleapis": "^128.0.0",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.344.0",
+    "nodemailer": "^6.9.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -31,7 +34,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "terser": "^5.44.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
