--- a/vercel.json
+++ b/vercel.json
@@ -1,33 +1,29 @@
 {
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/index.html"
-        }
-    ],
     "headers": [
         {
-            "source": "/(.*)",
+            "source": "/assets/(.*)",
             "headers": [
                 {
-                    "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com https://*.firebaseapp.com https://*.googleapis.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com https://cdn.jsdelivr.net; img-src 'self' data: https: blob:; connect-src 'self' https://api.web3forms.com https://accounts.google.com https://*.googleapis.com https://*.firebaseio.com https://*.cloudfunctions.net https://api.textlocal.in https://*.twilio.com; frame-src 'self' https://accounts.google.com https://*.firebaseapp.com; media-src 'self' blob:; object-src 'none'; base-uri 'self'; form-action 'self';"
-                },
+                    "key": "Cache-Control",
+                    "value": "public, max-age=31536000, immutable"
+                }
+            ]
+        },
+        {
+            "source": "/(.*).js",
+            "headers": [
                 {
-                    "key": "X-Frame-Options",
-                    "value": "SAMEORIGIN"
-                },
+                    "key": "Cache-Control",
+                    "value": "public, max-age=31536000, immutable"
+                }
+            ]
+        },
+        {
+            "source": "/(.*).css",
+            "headers": [
                 {
-                    "key": "X-Content-Type-Options",
-                    "value": "nosniff"
-                },
-                {
-                    "key": "Referrer-Policy",
-                    "value": "strict-origin-when-cross-origin"
-                },
-                {
-                    "key": "Permissions-Policy",
-                    "value": "camera=(), microphone=(), geolocation=()"
+                    "key": "Cache-Control",
+                    "value": "public, max-age=31536000, immutable"
                 }
             ]
         }
